# geoip-geocode

./: .env.example  .gitignore  CONFIGURATION_IMPLEMENTATION.md  LICENSE  MANIFEST.in  MULTI_DATABASE_CACHING.md  QUICKSTART.md  README-01K7Y780YWYNDQ18DSA4YKW9SF.md  README.md  REORGANIZATION_SUMMARY.md  config.yaml.example  examples_enriched.py  mkdocs.yml  pyproject.toml  test_update_infrastructure.py
.github/: copilot-instructions-01K7Y780YWYNDQ18DSA4YKW9SF.md
config/: .env.example  README.md  config.example.yaml  config.full.yaml  config.minimal.yaml  config.standard.yaml
data/: README.md
data/databases/: README.md
docs/: index.md
docs/development/: CONTRIBUTING.md  code_improvement_recommendations.md
docs/guides/: ASN_SUPPORT.md  CONFIGURATION.md  CONFIG_TEMPLATES.md
docs/user-guide/: IMPLEMENTATION.md  QUICKSTART.md
examples/: 01_basic_lookup.py  02_improved_usage.py  03_enriched_data.py  04_ip2location_usage.py  05_base_provider_demo.py  06_locales_usage.py  07_database_update.py  08_matching_rules.py  09_config_usage.py  README-01K7Y780YWYNDQ18DSA4YKW9SF.md  README.md
geoip_geocode/: __init__.py  cache.py  config.py  models.py  registry.py
geoip_geocode/providers/: __init__.py  geoip2.py
notebooks/: README.md
scripts/: health_check.sh
src/geoip_geocode/: cache.py  cli.py  config.py  matching.py  models.py  registry.py  updater.py
src/geoip_geocode/providers/: __init__.py  geoip2.py  ip2location.py  multi_database.py
tests/: README.md  __init__.py  test_cache.py  test_config.py  test_integration.py  test_ip2location.py  test_models.py  test_multi_database.py  test_registry.py
